# PGDrome

./: .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.conda/: conda_build_config.yaml  meta.yaml
.github/workflows/: publish_conda.yml  tests.yml
pgd/: solver.py
pgdrome/: model.py  solver.py
tests/: package_test_env.yml
tests/integration/: annika.py  elastic2D.py  test_Elastic2D_4variables.py  test_FD.py  test_convection2D.py  test_elastic.py  test_ghnatios.py  test_heat1D.py  test_heat1D_dimless.py  test_laplace.py  test_pgdproblem.py  test_solver_problem.py  test_solver_rk4.py  test_thermo.py  test_thermo_const.py  test_thermo_const_FD.py  test_thermo_dimless.py  test_thermo_moving.py  test_thermo_moving_3D.py  test_thermo_moving_3D_dimless.py  test_thermo_moving_3D_dimless_convection.py  thermo_3D_dimless_convection_cooling.py
tests/unit/: test_FD.py  test_FD_space.py  test_autotest.py  test_pgdclass.py  test_pgdclass_dolfin.py
