[metadata]
name = fenics-pgd
version = attr: fenics-pgd.__version__
author = Annika Robens-Radermacher, Dominic Strobl, Aratz Gracia Llona
author_email = annika.robens-radermacher@bam.de
description = A FEniCS based python module of the Proper Generalized Decomposition (PGD) method. Requires a working installation of FEniCS (including DOLFIN python interface).
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
license_files = LICENSE

[options]
python_requires = >= 3.6
packages = find:
include_package_data = True
install_requires =
    numpy
    scipy
    h5py
    xml
    os
    logging
    shutil
    tempfile
#    fenicstools #https://github.com/mikaem/fenicstools
#    dolfin

[options.extras_require]
tests =
    autopep8
    pylint
    pytest
    pytest-cov
    coverage
    pylint
    pytest-pylint
    pytest-flakes
    matplotlib

docs =
    sphinx >=3, <5
    sphinx-rtd-theme
    doit 
